[Fixes #16462831] Fixes button spacing issue for firefox
squash me

--- a/app/stylesheets/partials/_buttons.sass
+++ b/app/stylesheets/partials/_buttons.sass
@@ -314,6 +314,7 @@ a, input[type=submit]
     font-size: 12px
     font-weight: bold
     padding: 9px 15px 7px 15px
+    margin: 3px
     
   &.add_row, &.edit_button, &.delete_button
     background: #eee
